[Priyanshu] ADD: Added Movie Trailer field in movie schema with spec correction of genre
